--- a/styling.css
+++ b/styling.css
@@ -234,3 +234,31 @@ th {
     fill: turquoise;
     opacity: 0.3;
 }
+.node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 3px;
+}
+
+.node text {
+    font: 12px sans-serif;
+    color: white;
+}
+
+.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 2px;
+}
+.toolTipTechtree{
+    position: absolute;         
+    text-align: left;         
+    width: 100px;                    
+    height: 42px; /*14 multiply by 行數 */           
+    padding: 2px;               
+    font: 12px sans-serif;      
+    background: lightsteelblue;
+    border: 0px;        
+    border-radius: 8px;         
+    pointer-events: none;   
+}
